<resources>
    <string name="app_name">Worldepth</string>
    <string name="capture">Capture</string>
    <string name="load_sample">Load sample</string>
    <string name="read_permission_failed">Please allow read permission to open model files.</string>
    <string name="open_model">Open model…</string>
    <string name="open_model_success">Model loaded successfully.</string>
    <string name="open_model_error">Failed to load model.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="PWReq1">-Password must be at least 8 characters long</string>
    <string name="PWReq2">-Password cannot be over 20 characters long</string>
    <string name="PWReq3">-Password must have uppercase and lowercase letters</string>
    <string name="PWReq4">-Password must contain numbers</string>
    <string name="PWReq5">-Passwords must match</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="backButton">Back</string>
    <string name="emailSignup">Sign up with email</string>
    <string name="phoneSignup">Sign up with phone</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="viewer">Viewer</string>
    <string name="camera">Camera</string>
    <string name="nextButton">Next</string>
    <string name="phoneIcon">Phone icon</string>
    <string name="loading">Loading...</string>
    <string name="sign_out">Sign Out</string>
    <string name="guest">Guest</string>
    <string name="must_have_upper_and_lower_case">Must have upper and lower case</string>
    <string name="about">About</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us_on_the_app_store">Rate Us on the App Store</string>
    <string name="account">Account</string>
    <string name="must_contain_valid_characters">Must contain valid characters</string>
    <string name="viewerbacktocamera">viewerBackToCamera</string>
    <string name="sample">sample</string>
    <string name="email">Email</string>
    <string name="map">Map</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="day">Day</string>
    <string name="year">Year</string>

    <!-- FCM Related Strings -->
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="data_type">data_type</string>
    <string name="direct_message">direct_message</string>
    <string name="data_message">message</string>
    <string name="data_title">title</string>
    <string name="data_message_id">message_id</string>
    <!-- Bundle Extras -->
    <string name="intent_user_id">intent_user_id</string>

    <!-- Dialog Names -->
    <string name="dialog_message">dialog_message</string>


    <!-- Firebase Database Nodes -->
    <string name="dbnode_users">users</string>
    <string name="dbnode_messages">messages</string>



    <!-- Firebase Database Fields -->
    <string name="field_message">message</string>
    <string name="field_user_id">user_id</string>
    <string name="field_messaging_token">messaging_token</string>

    <!-- Strings -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="worldepthlogo">WorldepthLogo</string>
    <string name="title_activity_maps">Map</string>
    <string name="followers">Followers</string>
    <string name="friends">Friends</string>
    <string name="password">Password</string>
    <string name="test_login">Test Login</string>
    <string name="login">Login</string>
    <string name="animation">Animation</string>
    <string name="navbutton">NavButton</string>
    <string name="_0">0 %</string>
</resources>
