<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.Password.PasswordFragment">


    <EditText
        android:id="@+id/passwordInput"
        style="@style/WorldepthEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.SearchResult.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466"
        tools:layout_editor_absoluteX="0dp" />


    <EditText
        android:id="@+id/confirmPasswordInput"
        style="@style/WorldepthEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.SearchResult.Title"
        app:layout_constraintStart_toStartOf="@id/passwordInput"
        app:layout_constraintTop_toBottomOf="@id/passwordInput" />

    <TextView
        android:id="@+id/atLeast8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="73dp"
        android:text="@string/PWReq1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/confirmPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInput" />

    <TextView
        android:id="@+id/over20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="73dp"
        android:text="@string/PWReq2"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/confirmPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInput" />

    <TextView
        android:id="@+id/upperLower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="10dp"
        android:text="@string/must_have_upper_and_lower_case"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/confirmPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInput" />

    <TextView
        android:id="@+id/containNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="150dp"
        android:text="@string/PWReq4"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/confirmPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInput" />

    <TextView
        android:id="@+id/mustMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="212dp"
        android:text="@string/PWReq5"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/confirmPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInput" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/must_contain_valid_characters"
        android:id="@+id/passwordIllegalChars"
        android:visibility="invisible"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/lock3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/passwordNextButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969" />

    <ImageView
        android:id="@+id/passwordBackButton"
        android:layout_width="46dp"
        android:layout_height="65dp"
        android:src="@drawable/back2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />
</android.support.constraint.ConstraintLayout>