<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.StartScreen.StartScreenFragment">

    <Button
        android:id="@+id/goToSignUp"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:text="@string/signUp"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goToSignIn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:text="@string/signIn"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/goToSignUp"
        app:layout_constraintStart_toStartOf="@id/goToSignUp" />

    <Button
        android:id="@+id/goToViewer"
        style="@style/Widget.AppCompat.Button"
        android:textSize="25sp"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/viewer"
        app:layout_constraintStart_toStartOf="@id/goToSignIn"
        app:layout_constraintTop_toBottomOf="@id/goToSignIn" />

    <Button
        android:id="@+id/goToCamera"
        style="@style/Widget.AppCompat.Button"
        android:textSize="25sp"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="@id/goToViewer"
        app:layout_constraintTop_toBottomOf="@id/goToViewer" />

</android.support.constraint.ConstraintLayout>